--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div class="container bg-light">
+<div class="container bg-light mt-3">
   <div class="row">
     <div class="col-md-6 col-sm-12 mx-auto" style="text-align: center">
       <h1 class="mb-3 bg-dark">{{ title | uppercase }}</h1>
